/* Copyright 2021 Tianshu AI Platform. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 ============================================================= */

syntax = "proto3";
package tsvis;

message Tensor {
  message TensorShape {
    message Dim {
      int64 size = 1;
      string name = 2;
    }
    repeated Dim dim = 1;
  }

  string dtype = 1;
  TensorShape tensor_shape = 2;
  bytes tensor_content = 3;
}

message Projector {
  oneof content {
    Embedding  embedding = 1;
    Exception  exception = 2;
  }

  message Exception{
    Tensor value = 1;
  }

  message Embedding{
      message Sample{
        enum SampleType {
          TYPE_UNSPECIFIED = 0;
          AUDIO = 1;
          TEXT = 2;
          IMAGE = 3;
        }
        SampleType type = 2;
        Tensor X = 3;
    }

    Sample sample = 1;
    Tensor value = 2;
    Tensor label = 3;
  }
}
